# OpenCV_camera_in_OpenGL

./: CMakeLists.txt  LICENSE  README.md
src/: left09.cpp  left09.hpp  main.cpp  opengl_helper.cpp  opengl_helper.hpp  shader.hpp
